--- a/vitalni_znaki.html
+++ b/vitalni_znaki.html
@@ -78,7 +78,7 @@
             <ul class="dropdown-menu">
                 <li><a href="javascript:void(0)" onclick="kreirajEHRDemoOseb()"><span class="glyphicon glyphicon-certificate"></span>  Zgeneriraj EHR</a></li>
                 <li class="divider"></li>
-                <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
+                <li><a href="index.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
             </ul>
         </div>
 
@@ -89,7 +89,7 @@
 </div>
 
 <div class="page-header">
-    <a href="index.html" style="text-decoration: none;">
+    <a href="domov.html" style="text-decoration: none;">
         <div align="center">
             <h4><font color="blue"><span id="naslovnoIme"></span></font>
                 <small><font color="#6495ed">in moj e-Zdravnik</font></small><img src="images/e-doc-logo.png"></h4>
@@ -112,7 +112,7 @@
                     </div>
                     <ul class="nav nav-pills nav-stacked main-menu">
                         <li class="nav-header">Glavno</li>
-                        <li><a class="ajax-link" href="index.html"><i class="glyphicon glyphicon-home"></i><span> Domov</span></a>
+                        <li><a class="ajax-link" href="domov.html"><i class="glyphicon glyphicon-home"></i><span> Domov</span></a>
                         </li>
                         <li><a class="ajax-link" href="pregled_podatkov.html"><i class="glyphicon glyphicon-eye-open"></i><span> Pregled podatkov</span></a>
                         </li>
@@ -147,7 +147,7 @@
                                      class="glyphicon glyphicon-star"></i><span> Icons</span></a></li> -->
                         <!-- <li><a href="error.html"><i class="glyphicon glyphicon-ban-circle"></i><span> Error Page</span></a>
                          </li>
-                         <li><a href="login.html"><i class="glyphicon glyphicon-lock"></i><span> Login Page</span></a>
+                         <li><a href="index.html"><i class="glyphicon glyphicon-lock"></i><span> Login Page</span></a>
                          </li> -->
                     </ul>
                     <!-- <label id="for-is-ajax" for="is-ajax"><input id="is-ajax" type="checkbox"> Ajax on menu</label> -->
