--- a/anatomija_telesa_moski.html
+++ b/anatomija_telesa_moski.html
@@ -219,8 +219,8 @@
     </div>
 
     <footer class="row">
-        <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="http://usman.it" target="_blank">Muhammad
-            Usman</a> 2012 - 2014</p>
+        <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="https://www.linkedin.com/in/andrejcgasper" target="_blank">Muhammad
+            Gasper Andrejc</a></p>
 
         <p class="col-md-3 col-sm-3 col-xs-12 powered-by">Powered by: <a
                 href="http://usman.it/free-responsive-admin-template">Charisma</a></p>
