--- a/družinska_zgodovina.html
+++ b/družinska_zgodovina.html
@@ -219,7 +219,7 @@
 
 
             <footer class="row">
-                <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="https://ucilnica.fri.uni-lj.si/user/profile.php?id=14408" target="_blank">Gašper Andrejc</a> e-Zdravje projekt pri OIS</p>
+                <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="https://www.linkedin.com/in/andrejcgasper" target="_blank">Gašper Andrejc</a> e-Zdravje projekt pri OIS</p>
 
                 <p class="col-md-3 col-sm-3 col-xs-12 powered-by">Powered by: <a
                         href="http://usman.it/free-responsive-admin-template">Charisma</a></p>
